Models and services changes

--- a/Services/IReporter.Services.Data/IReporter.Services.Data.csproj
+++ b/Services/IReporter.Services.Data/IReporter.Services.Data.csproj
@@ -36,10 +36,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArticlesService.cs" />
     <Compile Include="CategoriesService.cs" />
+    <Compile Include="IArticlesService.cs" />
     <Compile Include="ICategoriesService.cs" />
-    <Compile Include="IJokesService.cs" />
-    <Compile Include="JokesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
