--- a/Tests/IReporter.Web.Controllers.Tests/IReporter.Web.Controllers.Tests.csproj
+++ b/Tests/IReporter.Web.Controllers.Tests/IReporter.Web.Controllers.Tests.csproj
@@ -83,7 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JokesControllerTests.cs" />
+    <Compile Include="ArticlesControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
