--- a/Data/IReporter.Data.Models/IReporter.Data.Models.csproj
+++ b/Data/IReporter.Data.Models/IReporter.Data.Models.csproj
@@ -60,8 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
-    <Compile Include="Joke.cs" />
-    <Compile Include="JokeCategory.cs" />
+    <Compile Include="Article.cs" />
+    <Compile Include="Comment.cs" />
+    <Compile Include="Category.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +80,10 @@
     </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\IReporter.Common\IReporter.Common.csproj">
+      <Project>{701F322F-AA01-4DDC-90B6-6935981C1E73}</Project>
+      <Name>IReporter.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IReporter.Data.Common\IReporter.Data.Common.csproj">
       <Project>{edfe3c57-ef5b-4636-9ecc-d0baca6b6379}</Project>
       <Name>IReporter.Data.Common</Name>
