--- a/Web/IReporter.Web/Web.config
+++ b/Web/IReporter.Web/Web.config
@@ -16,7 +16,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6" />
-    <httpRuntime targetFramework="4.6" requestValidationMode="2.0" />
+    <httpRuntime targetFramework="4.6" />
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
     <httpModules>
