--- a/Data/IReporter.Data.Models/IReporter.Data.Models.csproj
+++ b/Data/IReporter.Data.Models/IReporter.Data.Models.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Comment.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vote.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
