--- a/Web/IReporter.Web/packages.config
+++ b/Web/IReporter.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.9.4" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
@@ -11,6 +12,7 @@
   <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net46" />
   <package id="Glimpse.EF6" version="1.6.5" targetFramework="net46" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net46" />
+  <package id="HtmlSanitizer" version="3.1.93" targetFramework="net46" />
   <package id="jQuery" version="2.2.0" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
@@ -19,8 +21,11 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net46" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.1.1" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
