--- a/Web/IReporter.Web/IReporter.Web.csproj
+++ b/Web/IReporter.Web/IReporter.Web.csproj
@@ -223,6 +223,11 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Administration\AdministrationAreaRegistration.cs" />
     <Compile Include="Areas\Administration\Controllers\AdministrationController.cs" />
+    <Compile Include="Areas\Administration\Models\ArticleEditModel.cs" />
+    <Compile Include="Areas\Administration\Controllers\ArticlesController.cs" />
+    <None Include="Areas\Administration\Views\Shared\EditorTemplates\CategoriesTemplate.cshtml" />
+    <Compile Include="Areas\Editors\Controllers\EditorsController.cs" />
+    <Compile Include="Areas\Editors\EditorsAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ArticleDetailsController.cs" />
     <Compile Include="Controllers\ArticleTabStripController.cs" />
@@ -305,6 +310,12 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Areas\Administration\Views\web.config" />
     <Content Include="Areas\Administration\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Editors\Views\web.config" />
+    <Content Include="Areas\Editors\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Administration\Views\Administration\Index.cshtml" />
+    <Content Include="Areas\Administration\Views\Articles\_AllArticles.cshtml" />
+    <Content Include="Areas\Administration\Views\Shared\EditorTemplates\ExcerptTemplate.cshtml" />
+    <Content Include="Areas\Administration\Views\Shared\EditorTemplates\ContentTemplate.cshtml" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.2.0.js" />
     <Content Include="Scripts\jquery-2.2.0.min.js" />
@@ -386,8 +397,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Administration\Models\" />
-    <Folder Include="Areas\Administration\Views\Shared\" />
+    <Folder Include="Areas\Editors\Models\" />
+    <Folder Include="Areas\Editors\Views\Editors\" />
+    <Folder Include="Areas\Editors\Views\Shared\" />
     <Folder Include="Content\images\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\HomeGrid\" />
