--- a/Web/IReporter.Web/Web.config
+++ b/Web/IReporter.Web/Web.config
@@ -15,6 +15,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <customErrors mode="On" defaultRedirect="/Error/Index"></customErrors>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
